--- a/apps/fabric-website/package.json
+++ b/apps/fabric-website/package.json
@@ -19,25 +19,27 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "3.4.35",
-    "@types/enzyme": "2.8.8",
-    "@types/es6-promise": "^0.0.32",
+    "@types/enzyme": "2.8.12",
+    "@types/enzyme-adapter-react-16": "1.0.0",
+    "@types/es6-promise": "0.0.32",
     "@types/mocha": "2.2.39",
     "@types/node": "8.0.26",
     "@types/prop-types": "15.5.1",
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
-    "@types/react": "15.0.38",
-    "@types/react-dom": "15.5.1",
+    "@types/react": "16.0.10",
+    "@types/react-dom": "16.0.1",
     "@types/webpack-env": "1.13.0",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
     "highlight.js": "^9.6.0",
     "office-ui-fabric-core": ">=7.1.2 <8.0.0",
     "office-ui-fabric-react-tslint": ">=5.0.0 <6.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-highlight": "0.9.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-highlight": "0.10.0",
     "write-file-webpack-plugin": "^4.1.0"
   },
   "dependencies": {
