--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -17,28 +17,29 @@
     "update-snapshots": "node ../../scripts/build.js jest -u"
   },
   "devDependencies": {
-    "@types/enzyme": "2.8.8",
-    "@types/es6-promise": "^0.0.32",
+    "@types/enzyme": "2.8.12",
+    "@types/enzyme-adapter-react-16": "1.0.0",
+    "@types/es6-promise": "0.0.32",
     "@types/jest": "21.1.0",
     "@types/prop-types": "15.5.1",
-    "@types/react": "15.0.38",
+    "@types/react": "16.0.10",
     "@types/react-dom": "15.5.5",
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
     "@types/webpack-env": "1.13.0",
     "@uifabric/example-app-base": ">=5.1.1 <6.0.0",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "es6-promise": "^4.1.0",
     "es6-map": "^0.1.5",
     "es6-weak-map": "^2.0.2",
     "highlight.js": "^9.6.0",
     "office-ui-fabric-core": ">=7.1.2 <8.0.0",
     "office-ui-fabric-react-tslint": ">=5.0.0 <6.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-highlight": "0.9.0",
-    "react-test-renderer": "^15.6.1",
-    "resemblejs": "~2.2.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-highlight": "0.10.0",
+    "react-test-renderer": "^16.0.0",
     "sinon": "^2.3.2"
   },
   "dependencies": {
