--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -21,15 +21,17 @@
   ],
   "devDependencies": {
     "@types/jest": "21.1.0",
-    "@types/enzyme": "2.8.8",
+    "@types/enzyme": "^2.8.12",
+    "@types/enzyme-adapter-react-16": "1.0.0",
     "@types/prop-types": "15.5.1",
-    "@types/react": "15.0.38",
-    "@types/react-dom": "15.5.1",
+    "@types/react": "16.0.10",
+    "@types/react-dom": "16.0.1",
     "@types/sinon": "2.2.2",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "office-ui-fabric-react-tslint": ">=5.0.0 <6.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "sinon": "^2.3.2"
   },
   "dependencies": {
