--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -3,6 +3,7 @@
   "version": "5.3.0",
   "description": "Office UI Fabric example app base utilities for building example sites.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
     "@types/highlight.js": "9.12.2",
     "@types/react": "16.0.25",
     "@types/react-dom": "16.0.3",
-    "@types/webpack-env": "1.13.0",
+    "@types/webpack-env": "1.13.5",
     "es6-weak-map": "^2.0.2",
     "es6-map": "^0.1.5",
     "es6-promise": "^4.1.0",
