--- a/packages/experiments/package.json
+++ b/packages/experiments/package.json
@@ -3,6 +3,7 @@
   "version": "5.25.0",
   "description": "Experimental React components for building experiences for Office 365.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
@@ -28,7 +29,7 @@
     "@types/jest": "21.1.8",
     "@types/enzyme": "3.1.5",
     "@types/enzyme-adapter-react-16": "1.0.1",
-    "@types/webpack-env": "1.13.0",
+    "@types/webpack-env": "1.13.5",
     "@uifabric/example-app-base": ">=5.3.0 <6.0.0",
     "@uifabric/file-type-icons": ">=0.5.0 <1.0.0",
     "@uifabric/jest-serializer-merge-styles": ">=5.1.0 <6.0.0",
