--- a/packages/file-type-icons/package.json
+++ b/packages/file-type-icons/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "description": "Office UI Fabric file type icon set.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
