--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -3,6 +3,7 @@
   "version": "5.6.0",
   "description": "Office UI Fabric icon set.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
