--- a/packages/merge-styles/package.json
+++ b/packages/merge-styles/package.json
@@ -3,6 +3,7 @@
   "version": "5.13.0",
   "description": "Office UI Fabric style loading utilities.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
