--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -3,6 +3,7 @@
   "version": "5.64.4",
   "description": "Reusable React components for building experiences for Office 365.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
@@ -28,7 +29,7 @@
     "@types/react-test-renderer": "^16.0.0",
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
-    "@types/webpack-env": "1.13.0",
+    "@types/webpack-env": "1.13.5",
     "@uifabric/jest-serializer-merge-styles": ">=5.1.0 <6.0.0",
     "@uifabric/example-app-base": ">=5.3.0 <6.0.0",
     "enzyme": "^3.2.0",
