--- a/packages/styling/package.json
+++ b/packages/styling/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "node ../../scripts/build.js",
@@ -17,7 +18,7 @@
     "update-snapshots": "node ../../scripts/build.js jest -u"
   },
   "devDependencies": {
-    "@types/webpack-env": "1.13.0",
+    "@types/webpack-env": "1.13.5",
     "@types/react": "16.0.25",
     "@types/jest": "21.1.8",
     "es6-map": "^0.1.5",
