--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -3,6 +3,7 @@
   "version": "5.18.2",
   "description": "Office UI Fabric utilities for building React components.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
