--- a/packages/variants/package.json
+++ b/packages/variants/package.json
@@ -3,6 +3,7 @@
   "version": "5.0.2",
   "description": "Office UI Fabric subtheme generator.",
   "main": "lib/index.js",
+  "module": "lib-es2015/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
