--- a/packages/styling/package.json
+++ b/packages/styling/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "lib-es2015/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "lib-es2015/index.d.ts",
   "scripts": {
     "build": "node ../../scripts/build.js",
     "clean": "node ../../scripts/clean.js",
