--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -4,7 +4,7 @@
   "description": "Office UI Fabric utilities for building React components.",
   "main": "lib/index.js",
   "module": "lib-es2015/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "lib-es2015/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/OfficeDev/office-ui-fabric-react"
