--- a/scripts/package.json
+++ b/scripts/package.json
@@ -42,6 +42,7 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
     "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
     "webpack-notifier": "^1.6.0",
     "yargs": "^6.5.0"
