Updates to make es6 tree shaking work for reals

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,7 +13,6 @@
     "@microsoft/loader-load-themed-styles": "^1.6.0",
     "@uifabric/merge-styles": ">=5.13.0 <6.0.0",
     "autoprefixer": "^7.1.5",
-    "awesome-typescript-loader": "^4.0.1",
     "bundlesize": "^0.16.0",
     "chalk": "^2.1.0",
     "command-line-args": "^4.0.7",
@@ -38,10 +37,13 @@
     "style-loader": "^0.19.0",
     "tslint": "^5.9.1",
     "tslint-microsoft-contrib": "^5.0.3",
+    "ts-loader": "^4.1.0",
     "typescript": "2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
     "webpack-bundle-analyzer": "^2.11.1",
+    "rollup": "^0.57.1",
+    "webpack-rollup-loader": "^0.7.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
     "webpack-notifier": "^1.6.0",
