--- a/apps/todo-app/package.json
+++ b/apps/todo-app/package.json
@@ -16,6 +16,7 @@
     "office-ui-fabric-react-tslint": ">=5.0.0 <6.0.0"
   },
   "dependencies": {
+    "@uifabric/icons": "^5.6.0",
     "@microsoft/load-themed-styles": "^1.7.13",
     "es6-promise": "^4.1.0",
     "immutability-helper": "^2.6.4",
