--- a/packages/experiments/tsconfig.json
+++ b/packages/experiments/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "outDir": "dist",
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
