--- a/packages/file-type-icons/package.json
+++ b/packages/file-type-icons/package.json
@@ -4,7 +4,8 @@
   "description": "Office UI Fabric file type icon set.",
   "main": "lib/index.js",
   "module": "lib-es2015/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "lib-es2015/index.d.ts",
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/OfficeDev/office-ui-fabric-react"
