--- a/packages/styling/package.json
+++ b/packages/styling/package.json
@@ -10,6 +10,7 @@
   "main": "lib/index.js",
   "module": "lib-es2015/index.js",
   "typings": "lib-es2015/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "build": "node ../../scripts/build.js",
     "clean": "node ../../scripts/clean.js",
