--- a/packages/utilities/tsconfig.json
+++ b/packages/utilities/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "outDir": "lib",
-    "module": "commonjs",
+    "module": "es2015",
+    "target": "es5",
     "lib": [
       "es2017",
       "dom"
